# ofxstatement-revolut

./: .gitignore  CHANGELOG.md  Makefile  Pipfile  README.md  pyproject.toml
.github/workflows/: test.yml
src/ofxstatement_revolut/: __init__.py  csv_parser.py  pdf_parser.py  plugin.py
tests/: test_revolut.py
