[build-system]
requires = ["setuptools>=78.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "ofxstatement-revolut"
version = "0.2.1"
authors = [
  { name="Eduard Ralph" },
]
description = "Revolut plugin for ofxstatement"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Utilities",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
keywords = ["ofx", "banking", "statement", "plugin", "ofxstatement", "revolut"]
dependencies = [
  "ofxstatement",
  "pdfplumber",
]

[project.optional-dependencies]
test = [
  "pytest",
  "fpdf2",
]

[project.urls]
Homepage = "https://github.com/kedder/ofxstatement-revolut/"

[project.entry-points."ofxstatement"]
revolut = "ofxstatement_revolut.plugin:RevolutPlugin"
