[build-system]
requires = ["setuptools>=78.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "ofxstatement-revolut"
version = "0.4.0"
authors = [
  { name="Eduard Ralph" },
]
description = "Revolut plugin for ofxstatement"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Utilities",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
keywords = ["ofx", "banking", "statement", "plugin", "ofxstatement", "revolut"]
dependencies = [
  "ofxstatement",
  "pdfplumber",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "mypy",
  "black",
  "ruff",
  "fpdf2",
]

[project.urls]
Homepage = "https://github.com/kedder/ofxstatement-revolut/"

[project.entry-points."ofxstatement"]
revolut = "ofxstatement_revolut.plugin:RevolutPlugin"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=ofxstatement_revolut",
    "--cov-report=term-missing",
    "--no-cov-on-fail",
]

[tool.mypy]
strict = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
